# flash-moe-lunar-lake

./: .gitignore  .gitmodules  LICENSE  PLAN.md  README.md  create_base_gguf.py  expert_cache.py  expert_dispatch.py  expert_io.py  extract_experts.py  inspect_gguf.py  pyproject.toml  setup.py
.claude/: settings.local.json
tests/: conftest.py  test_create_base_gguf.py  test_expert_cache.py  test_expert_dispatch.py  test_expert_io.py  test_extract_experts.py  test_inspect_gguf.py  test_setup.py
