[project]
name = "flash-moe-lunar-lake"
version = "0.1.0"
description = "Flash-MoE expert streaming engine for Windows/Vulkan (Lunar Lake)"
requires-python = ">=3.11"
dependencies = [
    "gguf>=0.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "psutil>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "psutil>=6.0",
]
